Fix Bug 274678 - "Distribution list" written in singular form even when talking about several distribution lists

BUG: 274678
FIXED-IN: 4.9